--- a/branches/mipmap/tools/MeshConverter/MeshConverter_vc12.vcxproj
+++ b/branches/mipmap/tools/MeshConverter/MeshConverter_vc12.vcxproj
@@ -344,6 +344,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <DataExecutionPrevention>
       </DataExecutionPrevention>
+      <AdditionalLibraryDirectories>..\..\lib\Win64-visualstudio;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
