draw3DLine now uses projected color. drawLine (triangle wireframe) now uses current shader and special scanline behavior to emulate a line (no dda!. holes are here)

--- a/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj
+++ b/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj
@@ -1538,6 +1538,7 @@
     <ClCompile Include="CQ3LevelMesh.cpp" />
     <ClCompile Include="CSkinnedMesh.cpp" />
     <ClCompile Include="CSTLMeshFileLoader.cpp" />
+    <ClCompile Include="CTRGouraudNoZ2.cpp" />
     <ClCompile Include="CWGLManager.cpp" />
     <ClCompile Include="CXMeshFileLoader.cpp" />
     <ClCompile Include="CAnimatedMeshSceneNode.cpp" />
