--- a/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj.filters
+++ b/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj.filters
@@ -2279,6 +2279,9 @@
     <ClCompile Include="CWGLManager.cpp">
       <Filter>Irrlicht\video\OpenGL Context</Filter>
     </ClCompile>
+    <ClCompile Include="CTRGouraudNoZ2.cpp">
+      <Filter>Irrlicht\video\Burning Video</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Irrlicht.rc" />
