--- a/branches/mipmap/tools/IrrFontTool/newFontTool/irrFontTool_vc12.vcxproj
+++ b/branches/mipmap/tools/IrrFontTool/newFontTool/irrFontTool_vc12.vcxproj
@@ -50,7 +50,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <PlatformToolset>Windows7.1SDK</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
