--- a/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj
+++ b/branches/mipmap/source/Irrlicht/Irrlicht12.0.vcxproj
@@ -152,7 +152,7 @@
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <PlatformToolset>Windows7.1SDK</PlatformToolset>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_v110|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
