--- a/branches/mipmap/source/Irrlicht/Irrlicht14.0.vcxproj
+++ b/branches/mipmap/source/Irrlicht/Irrlicht14.0.vcxproj
@@ -760,6 +760,7 @@
       <CallingConvention>FastCall</CallingConvention>
       <DisableLanguageExtensions>false</DisableLanguageExtensions>
       <DisableSpecificWarnings>4577</DisableSpecificWarnings>
+      <StructMemberAlignment>16Bytes</StructMemberAlignment>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
